# ColorHoster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  consts.rs  device.rs  handlers.rs  keyboard.rs  keyboards.rs  main.rs  report.rs  utils.rs
src/keyboard/: chunks.rs  device.rs  keyboard.rs  mod.rs
